# File_System

./: .gitignore  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  Directory.cpp  Directory.hpp  FileDescriptor.cpp  FileDescriptor.hpp  INode.cpp  INode.hpp  Lock.cpp  Lock.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  SimpleFS.cpp  SimpleFS.hpp  lib.cpp  main.cpp  simplefs.h  test
etc/: simplefs.conf
etc/config/: blocks  blocks_bitmap  inodes  inodes_bitmap
src/: CMakeLists.txt  FileDescriptor.hpp  INode.cpp  INode.hpp  Lock.cpp  Lock.hpp  ResourceManager.cpp  ResourceManager.hpp  SimpleFS.cpp  SimpleFS.hpp  lib.cpp  main.cpp
tests/: CMakeLists.txt  SimpleFS_test.cpp  create_test.cpp  example_test.cpp  main_test.cpp
tests/etc_test/: simplefs_test.conf
